SERVER-46103 Retain NonResumableChangeStreamError label for 4.4