src/mongo/db/pipeline/process_interface/common_mongod_process_interface.cpp
@@ -340,7 +340,7 @@ boost::optional<Document> CommonMongodProcessInterface::lookupSingleDocument(
 
     auto lookedUpDocument = pipeline->getNext();
     if (auto next = pipeline->getNext()) {
-        uasserted(ErrorCodes::TooManyMatchingDocuments,
+        uasserted(ErrorCodes::ChangeStreamFatalError,
                   str::stream() << "found more than one document with document key "
                                 << documentKey.toString() << " [" << lookedUpDocument->toString()
                                 << ", " << next->toString() << "]");
